# sealwatch

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  compatibility.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: on_commit.yml  on_release.yml
docs/: conf.py  faq.rst  glossary.rst  index.rst  reference.rst  requirements.txt  usage.rst
examples/batch_extraction/: merge_batches.py
sealwatch/: __init__.py
sealwatch/F5/: __init__.py  _attack.py
sealwatch/batch_extraction/: extract_features.py
sealwatch/chi2/: __init__.py  _attack.py
sealwatch/dctr/: __init__.py  _dctr.py
sealwatch/ensemble_classifier/: __init__.py  base_learner.py  ensemble_classifier.py  fld.py  fld_ensemble_trainer.py  helpers.py  load_features.py  out_of_bag_error_estimates.py  subspace_dimensionality_search.py
sealwatch/features/: __init__.py
sealwatch/features/dctr/: __init__.py  dctr.py
sealwatch/features/gfr/: __init__.py  gfr.py
sealwatch/features/jrm/: __init__.py  absolute_value_features.py  common.py  cooccurrence.py  difference_features.py  integral_features.py  jrm.py  symmetrization.py
sealwatch/features/pharm/: __init__.py  pharm_original.py  pharm_revisited.py
sealwatch/features/spam/: __init__.py  spam.py
sealwatch/gfr/: __init__.py  _gfr.py
sealwatch/hcfcom/: __init__.py  hcfcom.py
sealwatch/jrm/: __init__.py  absolute_value_features.py  ccjrm.py  common.py  cooccurrence.py  difference_features.py  integral_features.py  jrm.md  jrm.py  symmetrization.py
sealwatch/lrt/: __init__.py  _attack.py
sealwatch/pharm/: __init__.py  pharm_original.py  pharm_revisited.py
sealwatch/rjca/: _attack.py
sealwatch/spa/: _attack.py
sealwatch/spam/: __init__.py  spam.py
sealwatch/srm/: __init__.py  cooccurrence.py  crm.py  srm.py  srmq1.py  symm.py
sealwatch/tools/: __init__.py  _backend.py  _defs.py  calibration.py  common.py  constants.py  dct.py  dict.py  features.py  grouping.py  jpeg.py  logger.py  matlab.py  networks.py  quantization_table.py  signal.py  writer.py
sealwatch/utils/: __init__.py  calibration.py  constants.py  dct.py  grouping.py  jpeg.py  matlab.py  writer.py
sealwatch/ws/: __init__.py  _attack.py  _unet.py
sealwatch/xunet/: __init__.py  _xunet.py  best_model_hill_01.pt  best_model_hill_04.pt  best_model_lsbm_01.pt  best_model_lsbm_04.pt  xunet.py
src/: lib.rs  spam.rs
test/: defs.py  test.py  test_F5.py  test_backend.py  test_chi2.py  test_convolution.py  test_crm.py  test_dctr.py  test_fld_ensemble_classifier.py  test_gfr.py  test_grouping.py  test_hcfcom.py  test_jrm.py  test_lrt.py  test_pharm.py  test_rjca.py  test_spa.py  test_spam.py  test_srm.py  test_tools.py  test_ws.py  test_xunet.py
test/assets/features_matlab/crm/: dolphin.mat  otter1.mat  otter2.mat  seal1.mat  seal2.mat  seal3.mat  seal4.mat  seal5.mat  seal6.mat  seal7.mat  seal8.mat
test/assets/features_matlab/dctr/: dolphin.mat  hafelekar.mat  otter1.mat  otter2.mat  patscherkofel1.mat  patscherkofel2.mat  seal1.mat  seal2.mat  seal3.mat  seal4.mat  seal5.mat  seal6.mat  seal7.mat  seal8.mat
test/assets/features_matlab/gfr/: dolphin.mat  hafelekar.mat  otter1.mat  otter2.mat  patscherkofel1.mat  patscherkofel2.mat  seal1.mat  seal2.mat  seal3.mat  seal4.mat  seal5.mat  seal7.mat  seal8.mat
test/assets/features_matlab/jrm/: dolphin.mat  otter1.mat  seal1.mat  seal2.mat  seal3.mat  seal4.mat  seal5.mat  seal6.mat  seal7.mat  seal8.mat
test/assets/features_matlab/pharm/: dolphin.mat  otter1.mat  otter2.mat  seal2.mat  seal5.mat  seal7.mat
test/assets/features_matlab/spam/: dolphin.mat  otter1.mat  otter2.mat  seal1.mat  seal2.mat  seal3.mat  seal4.mat  seal5.mat  seal6.mat  seal7.mat  seal8.mat
test/assets/features_matlab/srm/: dolphin.mat  otter1.mat  otter2.mat  seal1.mat  seal2.mat  seal3.mat  seal4.mat  seal5.mat  seal6.mat  seal7.mat  seal8.mat
tests/: defs.py  test_dctr.py  test_fld_ensemble_classifier.py  test_grouping.py  test_ws.py
(+7 files in other folders)
